syntax = "proto3";

package media;

import "google/protobuf/empty.proto";

option go_package = "social-network/shared/gen-go/media;media";

// Enum representing different image variant sizes
enum ImgVariant {
  IMG_VARIANT_UNSPECIFIED = 0; // Default unspecified variant
  THUMBNAIL = 1; // Thumbnail size variant
  SMALL = 2; // Small size variant
  MEDIUM = 3; // Medium size variant
  LARGE = 4; // Large size variant
  ORIGINAL = 5; // Original size variant
}

// Enum representing file visibility levels
enum FileVisibility {
  FILE_VISIBILITY_UNSPECIFIED = 0; // Default unspecified visibility
  PRIVATE = 1; // Private file visibility
  PUBLIC = 2; // Public file visibility
}

// Message representing metadata for a file
message FileMeta {
  int64 id = 1; // Unique identifier for the file
  string filename = 2; // Original filename provided by the user
  string mime_type = 3; // MIME type of the file (e.g., image/jpeg)
  int64 size_bytes = 4; // Size of the file in bytes
  string bucket = 5; // Bucket name where the file is stored
  string object_key = 6; // Key used to identify the file in the storage service
  FileVisibility visibility = 7; // Visibility level of the file
  ImgVariant variant = 8; // Variant type of the image
}

// Request message for uploading an image
message UploadImageRequest {
  string filename = 1; // Metadata of the file to upload
  string mime_type = 2;
  int64 size_bytes = 3;
  FileVisibility visibility = 4;
  int64 expiration_seconds = 5; // Expiration time for the upload URL in seconds
  repeated ImgVariant variants = 6; // List of image variants to generate
}

// Response message for uploading an image
message UploadImageResponse {
  int64 file_id = 1; // Unique identifier of the uploaded file
  string upload_url = 2; // Pre-signed URL for uploading the file
}

// Request message for retrieving an image
message GetImageRequest {
  int64 image_id = 1; // Unique identifier of the image
  ImgVariant variant = 2; // Desired variant of the image
}

// Response message for retrieving an image
message GetImageResponse {
  string download_url = 1; // Pre-signed URL for downloading the image
}

// Request message for validating an upload
message ValidateUploadRequest {
  int64 file_id = 1; // Metadata of the upload to validate
}

// Service definition for media operations
service MediaService {
  // Uploads an image and generates specified variants
  rpc UploadImage (UploadImageRequest) returns (UploadImageResponse);

  // Retrieves a download URL for a specific image variant
  rpc GetImage (GetImageRequest) returns (GetImageResponse);

  // Validates the metadata for an intended upload
  rpc ValidateUpload (ValidateUploadRequest) returns (google.protobuf.Empty);
}


